# dbSNP_to_parquet

./: README.md  Snakefile  check_requirements.sh  config.yaml  contig_map.tsv  convert_to_parquet.py  download.sh  pyproject.toml  run_cluster.sh
