[project]
name = "dbsnp-to-parquet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cyvcf2>=0.31.1",
    "snakemake>=9.6.0",
    "snakemake-executor-plugin-cluster-generic>=1.0.9",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "polars>=1.31.0",
]
